# test-ie-titanic

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt  setup.sh  str_utils.py  ui copy.ipynb  ui.ipynb
src/titanic_utils/: __init__.py  cli.py  str_utils.py
tests/: app.py  test_str_utils.py
