[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "titanic_utils"
authors = [{name = "Andres Arturo Ayala", email = "andres.ayala@student.ie.edu"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies =[
    "pandas"
]
[project.optional-dependencies]
dev=[
    "black"
    ]